--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -38,6 +38,11 @@
   description: A string for the label of OK button.
   raw: OK
 
+- name: COMMON_CONFIRM_BUTTON
+  value: Confirm
+  description: A string for the label of confirm button.
+  raw: Confirm
+
 - name: ERROR_1000_UNKNOWN_ERROR
   value: An unknown error occurred.
   description: A string for the error message when an error occurred.
