--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -82,3 +82,28 @@
   value: You have exceeded the rate limit. Please try again later.
   description: A string for the error message when the rate limit is exceeded.
   raw: You have exceeded the rate limit. Please try again later.
+
+- name: NAVIGATION_LABEL
+  value: Navigation
+  description: A string for the label of navigation.
+  raw: Navigation
+
+- name: NAVIGATION_HOME
+  value: Home
+  description: A string for the label of home navigation.
+  raw: Home
+
+- name: NAVIGATION_SIGN_IN
+  value: Sign In
+  description: A string for the label of sign in navigation.
+  raw: Sign In
+
+- name: NAVIGATION_SIGN_OUT
+  value: Sign Out
+  description: A string for the label of sign out navigation.
+  raw: Sign Out
+
+- name: NAVIGATION_SIGN_UP
+  value: Sign Up
+  description: A string for the label of sign up navigation.
+  raw: Sign Up
