--- a/i18n/localized.zh-cn.yaml
+++ b/i18n/localized.zh-cn.yaml
@@ -39,7 +39,7 @@
   raw: OK
 
 - name: COMMON_CONFIRM_BUTTON
-  value: null
+  value: 确认
   description: A string for the label of confirm button.
   raw: Confirm
 
@@ -82,3 +82,28 @@
   value: 您已超过访问速率限制。请稍后再试。
   description: A string for the error message when the rate limit is exceeded.
   raw: You have exceeded the rate limit. Please try again later.
+
+- name: NAVIGATION_LABEL
+  value: 导航
+  description: A string for the label of navigation.
+  raw: Navigation
+
+- name: NAVIGATION_HOME
+  value: 首页
+  description: A string for the label of home navigation.
+  raw: Home
+
+- name: NAVIGATION_SIGN_IN
+  value: 登录
+  description: A string for the label of sign in navigation.
+  raw: Sign In
+
+- name: NAVIGATION_SIGN_OUT
+  value: 登出
+  description: A string for the label of sign out navigation.
+  raw: Sign Out
+
+- name: NAVIGATION_SIGN_UP
+  value: 注册
+  description: A string for the label of sign up navigation.
+  raw: Sign Up
