--- a/i18n/raw.yaml
+++ b/i18n/raw.yaml
@@ -3,7 +3,7 @@
   description: A string for the label of close button.
 
 - name: COMMON_BACK_BUTTON
-  value: Back
+  value: Go Back
   description: A string for the label of back button.
 
 - name: COMMON_DELETE_BUTTON
@@ -33,6 +33,10 @@
 - name: COMMON_CONFIRM_BUTTON
   value: Confirm
   description: A string for the label of confirm button.
+
+- name: COMMON_ERROR_TITLE
+  value: Error
+  description: A string for the title of error message.
 
 - name: ERROR_1000_UNKNOWN_ERROR
   value: An unknown error occurred.
@@ -65,3 +69,27 @@
 - name: ERROR_1007_RATE_LIMIT_EXCEEDED
   value: You have exceeded the rate limit. Please try again later.
   description: A string for the error message when the rate limit is exceeded.
+
+- name: CUSTOM_ERROR_PAGE_NOT_FOUND
+  value: Page not found.
+  description: A string for the error message when the page is not found.
+
+- name: NAVIGATION_LABEL
+  value: Navigation
+  description: A string for the label of navigation.
+
+- name: NAVIGATION_HOME
+  value: Home
+  description: A string for the label of home navigation.
+
+- name: NAVIGATION_SIGN_IN
+  value: Sign In
+  description: A string for the label of sign in navigation.
+
+- name: NAVIGATION_SIGN_OUT
+  value: Sign Out
+  description: A string for the label of sign out navigation.
+
+- name: NAVIGATION_SIGN_UP
+  value: Sign Up
+  description: A string for the label of sign up navigation.
