--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -117,3 +117,13 @@
   value: Sign Up
   description: A string for the label of sign up navigation.
   raw: Sign Up
+
+- name: SITE_ICON_IMAGE_ALT
+  value: TYWZOJ's icon.
+  description: A string for the alt text of site icon image.
+  raw: TYWZOJ's icon.
+
+- name: SITE_TITLE_IMAGE_ALT
+  value: The site is TYWZOJ.
+  description: A string for the title of the site.
+  raw: The site is TYWZOJ.
