--- a/i18n/localized.zh-cn.yaml
+++ b/i18n/localized.zh-cn.yaml
@@ -88,6 +88,41 @@
   description: A string for the error message when the rate limit is exceeded.
   raw: You have exceeded the rate limit. Please try again later.
 
+- name: ERROR_2000_NO_SUCH_USER
+  value: 无此用户。
+  description: A string for the error message when no such user.
+  raw: No such user.
+
+- name: ERROR_2001_WRONG_PASSWORD
+  value: 密码错误。
+  description: A string for the error message when wrong password.
+  raw: Wrong password.
+
+- name: ERROR_2002_DUPLICATE_USERNAME
+  value: 用户名已被使用。
+  description: A string for the error message when the username is already used.
+  raw: The username is already used.
+
+- name: ERROR_2003_DUPLICATE_EMAIL
+  value: 电子邮件已被使用。
+  description: A string for the error message when the email is already used.
+  raw: The email is already used.
+
+- name: ERROR_2004_INVALID_EMAIL_VERIFICATION_CODE
+  value: 无效的电子邮件验证代码。
+  description: A string for the error message when the email verification code is invalid.
+  raw: Invalid email verification code.
+
+- name: ERROR_2005_FAILED_TO_SEND_EMAIL_VERIFICATION_CODE
+  value: 无法发送电子邮件验证代码。
+  description: A string for the error message when failed to send email verification code.
+  raw: Failed to send email verification code.
+
+- name: ERROR_2006_EMAIL_VERIFICATION_CODE_RATE_LIMITED
+  value: 您发送电子邮件验证代码的频率太快了。请稍后再试。
+  description: A string for the error message when email verification code is rate limited.
+  raw: You send email verification code too frequently. Please try again later.
+
 - name: CUSTOM_ERROR_PAGE_NOT_FOUND
   value: 页面未找到。
   description: A string for the error message when the page is not found.
@@ -187,32 +222,32 @@
   raw: Confirm Password
 
 - name: VALIDATION_ERROR_USERNAME_EMAIL_EMPTY
-  value: null
+  value: 用户名或邮箱不能为空。
   description: A string for the error message when username or email is empty.
   raw: Username or email cannot be empty.
 
 - name: VALIDATION_ERROR_PASSWORD_EMPTY
-  value: null
+  value: 密码不能为空。
   description: A string for the error message when password is empty.
   raw: Password cannot be empty.
 
 - name: VALIDATION_ERROR_USERNAME_EMPTY
-  value: null
+  value: 用户名不能为空。
   description: A string for the error message when username is empty.
   raw: Username cannot be empty.
 
 - name: VALIDATION_ERROR_EMAIL_EMPTY
-  value: null
+  value: 邮箱不能为空。
   description: A string for the error message when email is empty.
   raw: Email cannot be empty.
 
 - name: VALIDATION_ERROR_PASSWORD_CONFIRM_EMPTY
-  value: null
+  value: 确认密码不能为空。
   description: A string for the error message when password confirm is empty.
   raw: Password confirm cannot be empty.
 
 - name: VALIDATION_ERROR_PASSWORD_CONFIRM_MISMATCH
-  value: null
+  value: 确认密码与密码不匹配。
   description: >-
     A string for the error message when password confirm does not match the
     password.
