--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -168,6 +168,21 @@
   description: A string for the title of the site.
   raw: The site is TYWZOJ.
 
+- name: USER_MENU_LABEL
+  value: User Menu
+  description: A string for the label of user menu button.
+  raw: User Menu
+
+- name: USER_MENU_PROFILE
+  value: Profile
+  description: A string for the label of profile menu item.
+  raw: Profile
+
+- name: USER_MENU_SETTINGS
+  value: Settings
+  description: A string for the label of settings menu item.
+  raw: Settings
+
 - name: COPYRIGHT_NOTICE
   value: © {0} TYWZOJ. All rights reserved.
   description: A string for the copyright notice. {0} is the current year.
