--- a/i18n/raw.yaml
+++ b/i18n/raw.yaml
@@ -134,6 +134,18 @@
   value: The site is TYWZOJ.
   description: A string for the title of the site.
 
+- name: USER_MENU_LABEL
+  value: User Menu
+  description: A string for the label of user menu button.
+
+- name: USER_MENU_PROFILE
+  value: Profile
+  description: A string for the label of profile menu item.
+
+- name: USER_MENU_SETTINGS
+  value: Settings
+  description: A string for the label of settings menu item.
+
 - name: COPYRIGHT_NOTICE
   value: "© {0} TYWZOJ. All rights reserved."
   description: A string for the copyright notice. {0} is the current year.
