--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -138,6 +138,16 @@
   description: A string for the label of home navigation.
   raw: Home
 
+- name: NAVIGATION_PROBLEMS
+  value: Problems
+  description: A string for the label of problems navigation.
+  raw: Problems
+
+- name: NAVIGATION_PROBLEM_SETS
+  value: Problem Sets
+  description: A string for the label of problem sets navigation.
+  raw: Problem Sets
+
 - name: NAVIGATION_SIGN_IN
   value: Sign In
   description: A string for the label of sign in navigation.
