--- a/i18n/localized.zh-cn.yaml
+++ b/i18n/localized.zh-cn.yaml
@@ -277,3 +277,23 @@
     A string for the error message when password confirm does not match the
     password.
   raw: Password confirm does not match the password.
+
+- name: VISIBILITY_LABEL_PUBLIC
+  value: 公开
+  description: A string for the visibility of public.
+  raw: Public
+
+- name: VISIBILITY_LABEL_PAID
+  value: 付费
+  description: A string for the visibility of paid.
+  raw: Paid
+
+- name: VISIBILITY_LABEL_INTERNAL
+  value: 内部
+  description: A string for the visibility of internal.
+  raw: Internal
+
+- name: VISIBILITY_LABEL_PRIVATE
+  value: 私有
+  description: A string for the visibility of private.
+  raw: Private
