--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -276,6 +276,41 @@
   description: A string for the label of tags input.
   raw: Tags
 
+- name: PREVIOUS_PAGE_TOOLTIP
+  value: Previous
+  description: A string for the label of previous page button.
+  raw: Previous
+
+- name: PREVIOUS_PAGE_ARIA_LABEL
+  value: Go to the previous page.
+  description: A string for the label of previous page button.
+  raw: Go to the previous page.
+
+- name: NEXT_PAGE_TOOLTIP
+  value: Next
+  description: A string for the label of next page button.
+  raw: Next
+
+- name: NEXT_PAGE_ARIA_LABEL
+  value: Go to the next page.
+  description: A string for the label of next page button.
+  raw: Go to the next page.
+
+- name: PAGE_BUTTON_ARIA_LABEL
+  value: Go to page {0}.
+  description: A string for the label of page number. {0} is the page number.
+  raw: Go to page {0}.
+
+- name: FIRST_PAGE_BUTTON_ARIA_LABEL
+  value: Go to the first page.
+  description: A string for the label of first page button.
+  raw: Go to the first page.
+
+- name: LAST_PAGE_BUTTON_ARIA_LABEL
+  value: Go to the last page. The last page is {0}.
+  description: A string for the label of last page button.
+  raw: Go to the last page. The last page is {0}.
+
 - name: VALIDATION_ERROR_USERNAME_EMAIL_EMPTY
   value: Username or email cannot be empty.
   description: A string for the error message when username or email is empty.
