--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -138,6 +138,16 @@
   description: A string for the label of home navigation.
   raw: Home
 
+- name: NAVIGATION_PROBLEMS
+  value: Problems
+  description: A string for the label of problems navigation.
+  raw: Problems
+
+- name: NAVIGATION_PROBLEM_SETS
+  value: Problem Sets
+  description: A string for the label of problem sets navigation.
+  raw: Problem Sets
+
 - name: NAVIGATION_SIGN_IN
   value: Sign In
   description: A string for the label of sign in navigation.
@@ -157,6 +167,11 @@
   value: Forgot Password
   description: A string for the label of forgot password navigation.
   raw: Forgot Password
+
+- name: NAVIGATION_SUBMISSIONS
+  value: Submissions
+  description: A string for the label of submissions navigation.
+  raw: Submissions
 
 - name: SITE_ICON_IMAGE_ALT
   value: TYWZOJ's icon.
@@ -236,6 +251,66 @@
   description: A string for the label of password confirm input.
   raw: Confirm Password
 
+- name: TITLE_LABEL
+  value: Title
+  description: A string for the label of title input.
+  raw: Title
+
+- name: ID_LABEL
+  value: ID
+  description: A string for the label of ID input.
+  raw: ID
+
+- name: VISIBILITY_LABEL
+  value: Visibility
+  description: A string for the label of visibility input.
+  raw: Visibility
+
+- name: DESCRIPTION_LABEL
+  value: Description
+  description: A string for the label of description input.
+  raw: Description
+
+- name: TAGS_LABEL
+  value: Tags
+  description: A string for the label of tags input.
+  raw: Tags
+
+- name: PREVIOUS_PAGE_TOOLTIP
+  value: Previous
+  description: A string for the label of previous page button.
+  raw: Previous
+
+- name: PREVIOUS_PAGE_ARIA_LABEL
+  value: Go to the previous page.
+  description: A string for the label of previous page button.
+  raw: Go to the previous page.
+
+- name: NEXT_PAGE_TOOLTIP
+  value: Next
+  description: A string for the label of next page button.
+  raw: Next
+
+- name: NEXT_PAGE_ARIA_LABEL
+  value: Go to the next page.
+  description: A string for the label of next page button.
+  raw: Go to the next page.
+
+- name: PAGE_BUTTON_ARIA_LABEL
+  value: Go to page {0}.
+  description: A string for the label of page number. {0} is the page number.
+  raw: Go to page {0}.
+
+- name: FIRST_PAGE_BUTTON_ARIA_LABEL
+  value: Go to the first page.
+  description: A string for the label of first page button.
+  raw: Go to the first page.
+
+- name: LAST_PAGE_BUTTON_ARIA_LABEL
+  value: Go to the last page. The last page is {0}.
+  description: A string for the label of last page button.
+  raw: Go to the last page. The last page is {0}.
+
 - name: VALIDATION_ERROR_USERNAME_EMAIL_EMPTY
   value: Username or email cannot be empty.
   description: A string for the error message when username or email is empty.
@@ -267,3 +342,23 @@
     A string for the error message when password confirm does not match the
     password.
   raw: Password confirm does not match the password.
+
+- name: VISIBILITY_LABEL_PUBLIC
+  value: Public
+  description: A string for the visibility of public.
+  raw: Public
+
+- name: VISIBILITY_LABEL_PAID
+  value: Paid
+  description: A string for the visibility of paid.
+  raw: Paid
+
+- name: VISIBILITY_LABEL_INTERNAL
+  value: Internal
+  description: A string for the visibility of internal.
+  raw: Internal
+
+- name: VISIBILITY_LABEL_PRIVATE
+  value: Private
+  description: A string for the visibility of private.
+  raw: Private
