--- a/i18n/localized.zh-cn.yaml
+++ b/i18n/localized.zh-cn.yaml
@@ -138,6 +138,16 @@
   description: A string for the label of home navigation.
   raw: Home
 
+- name: NAVIGATION_PROBLEMS
+  value: 题目
+  description: A string for the label of problems navigation.
+  raw: Problems
+
+- name: NAVIGATION_PROBLEM_SETS
+  value: 题集
+  description: A string for the label of problem sets navigation.
+  raw: Problem Sets
+
 - name: NAVIGATION_SIGN_IN
   value: 登录
   description: A string for the label of sign in navigation.
@@ -157,6 +167,11 @@
   value: 忘记密码
   description: A string for the label of forgot password navigation.
   raw: Forgot Password
+
+- name: NAVIGATION_SUBMISSIONS
+  value: null
+  description: A string for the label of submissions navigation.
+  raw: Submissions
 
 - name: SITE_ICON_IMAGE_ALT
   value: TYWZOJ 的图标。
@@ -236,6 +251,66 @@
   description: A string for the label of password confirm input.
   raw: Confirm Password
 
+- name: TITLE_LABEL
+  value: 标题
+  description: A string for the label of title input.
+  raw: Title
+
+- name: ID_LABEL
+  value: ID
+  description: A string for the label of ID input.
+  raw: ID
+
+- name: VISIBILITY_LABEL
+  value: 可见度
+  description: A string for the label of visibility input.
+  raw: Visibility
+
+- name: DESCRIPTION_LABEL
+  value: 描述
+  description: A string for the label of description input.
+  raw: Description
+
+- name: TAGS_LABEL
+  value: 标签
+  description: A string for the label of tags input.
+  raw: Tags
+
+- name: PREVIOUS_PAGE_TOOLTIP
+  value: 上一页
+  description: A string for the label of previous page button.
+  raw: Previous
+
+- name: PREVIOUS_PAGE_ARIA_LABEL
+  value: 前往上一页。
+  description: A string for the label of previous page button.
+  raw: Go to the previous page.
+
+- name: NEXT_PAGE_TOOLTIP
+  value: 下一页
+  description: A string for the label of next page button.
+  raw: Next
+
+- name: NEXT_PAGE_ARIA_LABEL
+  value: 前往下一页。
+  description: A string for the label of next page button.
+  raw: Go to the next page.
+
+- name: PAGE_BUTTON_ARIA_LABEL
+  value: 前往第 {0} 页。
+  description: A string for the label of page number. {0} is the page number.
+  raw: Go to page {0}.
+
+- name: FIRST_PAGE_BUTTON_ARIA_LABEL
+  value: 前往第一页。
+  description: A string for the label of first page button.
+  raw: Go to the first page.
+
+- name: LAST_PAGE_BUTTON_ARIA_LABEL
+  value: 前往最后一页。最后一页是 {0}。
+  description: A string for the label of last page button.
+  raw: Go to the last page. The last page is {0}.
+
 - name: VALIDATION_ERROR_USERNAME_EMAIL_EMPTY
   value: 用户名或邮箱不能为空。
   description: A string for the error message when username or email is empty.
@@ -267,3 +342,23 @@
     A string for the error message when password confirm does not match the
     password.
   raw: Password confirm does not match the password.
+
+- name: VISIBILITY_LABEL_PUBLIC
+  value: 公开
+  description: A string for the visibility of public.
+  raw: Public
+
+- name: VISIBILITY_LABEL_PAID
+  value: 付费
+  description: A string for the visibility of paid.
+  raw: Paid
+
+- name: VISIBILITY_LABEL_INTERNAL
+  value: 内部
+  description: A string for the visibility of internal.
+  raw: Internal
+
+- name: VISIBILITY_LABEL_PRIVATE
+  value: 私有
+  description: A string for the visibility of private.
+  raw: Private
