--- a/i18n/raw.yaml
+++ b/i18n/raw.yaml
@@ -110,6 +110,14 @@
   value: Home
   description: A string for the label of home navigation.
 
+- name: NAVIGATION_PROBLEMS
+  value: Problems
+  description: A string for the label of problems navigation.
+
+- name: NAVIGATION_PROBLEM_SETS
+  value: Problem Sets
+  description: A string for the label of problem sets navigation.
+
 - name: NAVIGATION_SIGN_IN
   value: Sign In
   description: A string for the label of sign in navigation.
@@ -125,6 +133,10 @@
 - name: NAVIGATION_FORGOT_PASSWORD
   value: Forgot Password
   description: A string for the label of forgot password navigation.
+
+- name: NAVIGATION_SUBMISSIONS
+  value: Submissions
+  description: A string for the label of submissions navigation.
 
 - name: SITE_ICON_IMAGE_ALT
   value: "TYWZOJ's icon."
@@ -185,6 +197,54 @@
   value: Confirm Password
   description: A string for the label of password confirm input.
 
+- name: TITLE_LABEL
+  value: Title
+  description: A string for the label of title input.
+
+- name: ID_LABEL
+  value: ID
+  description: A string for the label of ID input.
+
+- name: VISIBILITY_LABEL
+  value: Visibility
+  description: A string for the label of visibility input.
+
+- name: DESCRIPTION_LABEL
+  value: Description
+  description: A string for the label of description input.
+
+- name: TAGS_LABEL
+  value: Tags
+  description: A string for the label of tags input.
+
+- name: PREVIOUS_PAGE_TOOLTIP
+  value: Previous
+  description: A string for the label of previous page button.
+
+- name: PREVIOUS_PAGE_ARIA_LABEL
+  value: Go to the previous page.
+  description: A string for the label of previous page button.
+
+- name: NEXT_PAGE_TOOLTIP
+  value: Next
+  description: A string for the label of next page button.
+
+- name: NEXT_PAGE_ARIA_LABEL
+  value: Go to the next page.
+  description: A string for the label of next page button.
+
+- name: PAGE_BUTTON_ARIA_LABEL
+  value: Go to page {0}.
+  description: A string for the label of page number. {0} is the page number.
+
+- name: FIRST_PAGE_BUTTON_ARIA_LABEL
+  value: Go to the first page.
+  description: A string for the label of first page button.
+
+- name: LAST_PAGE_BUTTON_ARIA_LABEL
+  value: Go to the last page. The last page is {0}.
+  description: A string for the label of last page button.
+
 - name: VALIDATION_ERROR_USERNAME_EMAIL_EMPTY
   value: Username or email cannot be empty.
   description: A string for the error message when username or email is empty.
@@ -208,3 +268,19 @@
 - name: VALIDATION_ERROR_PASSWORD_CONFIRM_MISMATCH
   value: Password confirm does not match the password.
   description: A string for the error message when password confirm does not match the password.
+
+- name: VISIBILITY_LABEL_PUBLIC
+  value: Public
+  description: A string for the visibility of public.
+
+- name: VISIBILITY_LABEL_PAID
+  value: Paid
+  description: A string for the visibility of paid.
+
+- name: VISIBILITY_LABEL_INTERNAL
+  value: Internal
+  description: A string for the visibility of internal.
+
+- name: VISIBILITY_LABEL_PRIVATE
+  value: Private
+  description: A string for the visibility of private.
