--- a/i18n/localized.en.yaml
+++ b/i18n/localized.en.yaml
@@ -397,3 +397,43 @@
   value: Private
   description: A string for the visibility of private.
   raw: Private
+
+- name: USER_LEVEL_LABEL
+  value: Level
+  description: A string for the label of user level.
+  raw: Level
+
+- name: USER_LEVEL_LABEL_ADMIN
+  value: Admin
+  description: A string for the label of admin user level.
+  raw: Admin
+
+- name: USER_LEVEL_LABEL_MANAGER
+  value: Manager
+  description: A string for the label of manager user level.
+  raw: Manager
+
+- name: USER_LEVEL_LABEL_INTERNAL
+  value: Internal
+  description: A string for the label of internal user level.
+  raw: Internal
+
+- name: USER_LEVEL_LABEL_PAID
+  value: Paid
+  description: A string for the label of paid user level.
+  raw: Paid
+
+- name: USER_LEVEL_LABEL_GENERAL
+  value: General
+  description: A string for the label of general user level.
+  raw: General
+
+- name: USER_LEVEL_LABEL_SPECIFIC
+  value: Specific
+  description: A string for the label of specific user level.
+  raw: Specific
+
+- name: USER_LEVEL_LABEL_DISABLED
+  value: Disabled
+  description: A string for the label of disabled user level.
+  raw: Disabled
